[tool.poetry]
name = "lnproxy"
version = "0.1.3"
description = "Proxy modified C-Lightning clients' traffic, removing onions for mesh transmission "
authors = ["willcl-ark <will8clark@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/willcl-ark/lnproxy'


[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
hkdf = "^0.0.3"
pylightning = "^0.0.7.3"
secp256k1 = "^0.13.2"
trio = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
lnproxy = 'lnproxy.proxy:main'